--- a/md-02a-data-visualization.qmd
+++ b/md-02a-data-visualization.qmd
@@ -1,6 +1,6 @@
 ---
 title: "Data Visualisation"
-author: ""
+author: "Ella Haechler"
 format:
   html:
     embed-resources: true
@@ -37,7 +37,7 @@ library(rnaturalearth)
 
 3.  On a new line use the `filter()` function to narrow down the data for observation of the year 2007.
 
-4.  Use the assignment operator to assign the data to an object named `gapminder_2007`.
+4.  Use the assignment operator to assign the data to an object named `gapminder_2007 (?)`.
 
 5.  Run the code contained in the code chunk and fix any errors.
 
@@ -46,10 +46,10 @@ library(rnaturalearth)
 7.  Render the document and fix any errors.
 
 ```{r}
-#| eval: false
+#| eval: true
  
-gapminder_2007 <- ___ |> 
-  ___(year == 2007) 
+gapminder_2007 <- gapminder |>
+  filter(year == 2007) 
 ```
 
 ## Task 3: Summarize data for life expectancy by continent
@@ -64,7 +64,7 @@ gapminder_2007 <- ___ |>
 
 4.  On a new line use the `summarise()` function to calculate the number of observations (count) and median life expectancy.
 
-5.  Use the assignment operator to assign the data to an object named `gapminder_summary_2007`.
+5.  Use the assignment operator to assign the data to an object named `gapminder_summary_2007 (?)`.
 
 6.  Run the code contained in the code chunk and fix any errors.
 
@@ -73,13 +73,13 @@ gapminder_2007 <- ___ |>
 8.  Render the document and fix any errors.
 
 ```{r}
-#| eval: false
+#| eval: true
 
-gapminder_summary_2007 <- ___ |> 
-  group_by(___) |> 
+gapminder_summary_2007 <- gapminder_2007 |>
+  group_by(continent) |> 
   summarise(
     count = n(),
-    lifeExp = median(___)
+    lifeExp = median(lifeExp)
   )
 ```
 
@@ -89,7 +89,7 @@ gapminder_summary_2007 <- ___ |>
 
 1.  A code chunk has already been created.
 
-2.  Start with the `gapminder` object and add the pipe operator at the end of the line.
+2.  Start with the `gapminder` object and add the pipe operator (command + shift + m) at the end of the line.
 
 3.  On a new line use the `group_by()` function to group the operations that follow by continent and year. Add the pipe operator at the end of the line.
 
@@ -104,11 +104,11 @@ gapminder_summary_2007 <- ___ |>
 8.  Render the document and fix any errors.
 
 ```{r}
-#| eval: false
+#| eval: true
 
-gapminder_summary_continent_year <- gapminder ___ 
-  group_by(continent, ___) |> 
-  ___(lifeExp = median(lifeExp)) 
+gapminder_summary_continent_year <- gapminder %>%  
+  group_by(continent, year) |> 
+  summarise(lifeExp = median(lifeExp)) 
 
 ```
 
@@ -139,13 +139,18 @@ gapminder_summary_continent_year <- read_rds(here::here("data/gapminder-summary-
 -   life expectancy to the y-axis;
 -   continent to color using the `fill = continent` argument inside `aes()`
 
-3.  Do not display (ignore) the outliers in the plot. **Note: Use a search engine or an AI tool to find the solution and add the link to the solution you have found.**
+3.  Do not display (ignore) the outliers in the plot. **Note: Use a search engine or an AI tool to find the solution and add the link to the solution you have found.** <https://www.statology.org/remove-outliers-in-boxplots-r/>
 
 4.  Run the code contained in the code chunk and fix any errors.
 
-5.  What are the data types of the three variables used for aesthetic mappings?
+5.  What are the data types of the three variables used for aesthetic mappings? categorical variables (continents) (?)
 
 ```{r}
+ggplot(data = gapminder_2007,
+       mapping = aes(x = continent,
+                     y = lifeExp,
+                     fill = continent)) +
+  geom_boxplot(outlier.shape = NA)
 
 ```
 
@@ -162,6 +167,12 @@ gapminder_summary_continent_year <- read_rds(here::here("data/gapminder-summary-
 3.  Run the code contained in the code chunk and fix any errors.
 
 ```{r}
+ggplot(data = gapminder_summary_continent_year,
+       mapping = aes(x = year,
+                     y = lifeExp,
+                     color = continent)) +
+  geom_line() +
+  geom_point()
 
 ```
 
@@ -179,6 +190,10 @@ gapminder_summary_continent_year <- read_rds(here::here("data/gapminder-summary-
 3.  Run the code contained in the code chunk and fix any errors.
 
 ```{r}
+ggplot(data = gapminder_summary_2007,
+       mapping = aes(x = continent,
+                     y = count)) +
+  geom_col()
 
 ```
 
@@ -192,9 +207,12 @@ gapminder_summary_continent_year <- read_rds(here::here("data/gapminder-summary-
 
 3.  Run the code contained in the code chunk and fix any errors.
 
-4.  The plot is identical to the plot created with `geom_col()`. Why? What does the `geom_bar()` function do? Write your text here:
+4.  The plot is identical to the plot created with `geom_col()`. Why? What does the `geom_bar()` function do? Write your text here: the geom_bar() does not need the y axis, it only needs the x axis compared to the geom_col(), which needs both x- and y-axis. but not exactly sure what else I can read/know from this ... :/
 
 ```{r}
+ggplot(data = gapminder_2007,
+       mapping = aes(x = continent)) +
+  geom_bar()
 
 ```
 
@@ -218,9 +236,18 @@ gapminder_summary_continent_year <- read_rds(here::here("data/gapminder-summary-
 
 6.  Describe how the `geom_histogram()` function is similar to the `geom_bar()` function.
 
+    The histogram is reader friendly I think because it also uses more colors etc. so you can distinguish better the facts.
+
 7.  What happens by adding the 'breaks' argument? Play around with the numbers inside of `seq()` to see what changes. Describe here what you observe:
 
+    so when I use 10 instead of 2.5. the bars get less accurate and sum up more steps and there are wider assumptions. And when I use e.g. 0.5 instead of 2.5 the bars get smaller, more narrow and more accurate but also it is harder to read and really detailed and not as simple to look at.
+
 ```{r}
+ggplot(data = gapminder_2007,
+       mapping = aes(x = lifeExp,
+                     fill = continent)) +
+  geom_histogram(col = "grey30",
+                 breaks = seq(40, 85, 2.5))
 
 ```
 
@@ -244,7 +271,13 @@ gapminder_summary_continent_year <- read_rds(here::here("data/gapminder-summary-
 7.  Run the code contained in the code chunk and fix any errors.
 
 ```{r}
-
+ggplot(data = gapminder_2007,
+       mapping = aes(x = gdpPercap,
+                    y = lifeExp,
+                    size = pop,
+                    color = country)) +
+  geom_point(show.legend = FALSE) +
+  facet_wrap(~continent)
 ```
 
 ## Task 11: Create a lineplot and use facets
@@ -257,12 +290,14 @@ gapminder_summary_continent_year <- read_rds(here::here("data/gapminder-summary-
 
 4.  What is stored in the `country_colors` object? Find out by executing the object in the Console (type it to the Console and hit enter). Do the same again, but with a question mark `?country_colors`.
 
+    I think it makes that eack continent stays in a certain color range
+
 5.  Next to the code chunk option `#| eval:` change the value from `false` to `true`.
 
 6.  Render the document and fix any errors.
 
 ```{r}
-#| eval: false
+#| eval: true
 
 ggplot(data = gapminder,
        mapping = aes(x = year, 
@@ -271,7 +306,7 @@ ggplot(data = gapminder,
                      color = country)) +
   geom_line(lwd = 1, show.legend = FALSE) + 
   facet_wrap(~continent) +
-  # scale_color_manual(values = country_colors) +
+  scale_color_manual(values = country_colors) +
   theme_minimal() 
 
 ```
@@ -289,7 +324,7 @@ The code chunk below contains code for a world map that shows countries by incom
 3.  Render the document and fix any errors.
 
 ```{r}
-#| eval: false
+#| eval: true
 
 world <- ne_countries(scale = "small", returnclass = "sf")
 
